# RustyChunker-for-gpt4

./: .gitignore  Cargo.toml  ENHANCED_FEATURES.md  pyproject.toml  test_chunker.py
src/: chunk_merger.rs  chunk_overlapper.rs  chunking.rs  error.rs  lib.rs  o200k_vocab.rs  parallel_processor.rs  pdf_processor.rs  semantic_chunker.rs  semantic_segmenter.rs  text_extractor.rs  text_preprocessor.rs  tiktoken_core.rs
