[package]
name = "rustmethods"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
once_cell = "1.19.0"
parking_lot = "0.12.4"
rayon = "1.10.0"
lopdf = "0.36.0"
pdfium-render = "0.8.34"
image = "0.25.6"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.98"
thiserror = "2.0.12"
log = "0.4.27"
num_cpus = "1.17.0"
regex = "1.11.1"
env_logger = "0.11.8"

[lib]
name = "myrustchunker"
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "sysinfoapi"] }

